---
title: "CatLium EduTech — Database Schema (3c): Assessments and Attempts"
---
%%{init: {'theme':'base','themeVariables':{'fontFamily':'serif','primaryColor':'#ffffff','primaryTextColor':'#000000','primaryBorderColor':'#000000','lineColor':'#000000','secondaryColor':'#ffffff','tertiaryColor':'#ffffff'},'htmlLabels':false,'er':{'useMaxWidth':false}}}%%
erDiagram
    institutes ||--o{ assessments : institute_id
    assessments ||--o{ assessment_questions : assessment_id
    questions ||--o{ assessment_questions : question_id
    assessments ||--o{ attempts : assessment_id

    institutes {
        uuid id PK
        varchar name
        varchar slug UK
    }
    assessments {
        uuid id PK
        uuid institute_id FK
        varchar title
        int duration_minutes
        int max_marks
        varchar status "DRAFT | PUBLISHED | ACTIVE | COMPLETED"
        timestamp starts_at
        timestamp ends_at
    }
    assessment_questions {
        uuid assessment_id FK
        uuid question_id FK
        int sort_order
        int marks
        varchar section
    }
    attempts {
        uuid id PK
        uuid assessment_id FK
        uuid student_id FK
        varchar status "IN_PROGRESS | SUBMITTED | EXPIRED"
        timestamp deadline
        int score
        int total_marks
        timestamp submitted_at
    }
    questions {
        uuid id PK
        uuid institute_id FK
        text stem
        varchar question_type
    }